# sponge

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: absorb.rs  absorbable.rs  constraints.rs  lib.rs  test.rs
src/constraints/: absorb.rs  absorbable.rs  mod.rs
src/digest_sponge/: mod.rs
src/domain_separated/: constraints.rs  mod.rs
src/dummy/: mod.rs
src/poseidon/: constraints.rs  grain_lfsr.rs  mod.rs  parameters.rs  permute.rs  sponge.rs  state.rs  tests.rs  traits.rs
src/rescue/: constraints.rs  mod.rs
