[package]
name = "ark-sponge"
version = "0.2.0"
authors = []
edition = "2018"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[dependencies]
ark-ec = { version = "^0.2.0", default_features = false }
ark-ff = { version = "^0.2.0", default_features = false }
ark-std = { version = "^0.2.0", default-features = false }
derivative = { version = "2.1.1", features = [ "use_core" ] }
digest = { version = "0.9.0", default_features = false }
rand_core = { version = "0.5" }
rand_chacha = { version = "0.2.1", default-features = false }

# Dependencies for r1cs
ark-nonnative-field = { version = "^0.2.0", default-features = false, optional = true }
ark-r1cs-std = { version = "^0.2.0", default-features = false, optional = true }
ark-relations = { version = "^0.2.0", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }

[dev-dependencies]
ark-test-curves = {version = "0.2.0", features = ["bls12_381_curve", "mnt4_753_curve"]}

[features]
default = [ "r1cs", "std" ]
r1cs = [ "ark-nonnative-field", "ark-relations", "ark-r1cs-std", "tracing" ]
std = [ "ark-ec/std", "ark-ff/std", "ark-nonnative-field/std", "ark-r1cs-std/std", "ark-relations/std", "ark-std/std" ]
