[package]
name = "ark-sponge"
version = "0.4.0-alpha"
authors = [ "arkworks contributors" ]
description = "An implementation of the cryptographic sponge functions for zkSNARK"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/sponge"
documentation = "https://docs.rs/ark-sponge/"
keywords = [ "zero-knowledge", "cryptography", "zkSNARK", "SNARK", "sponge" ]
categories = [ "cryptography" ]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[dependencies]
ark-ff = { version = "0.4.0-alpha", default_features = false }
ark-ec = { version = "0.4.0-alpha", default_features = false }
ark-serialize = { version = "0.4.0-alpha", default_features = false}
ark-std = { version = "0.4.0-alpha", default-features = false }
derivative = { version = "2.1.1", features = [ "use_core" ] }
digest = { version = "0.10.3", default_features = false }
rand_chacha = { version = "0.3.0", default-features = false }

# Dependencies for r1cs
ark-r1cs-std = { version = "0.4.0-alpha", default-features = false, optional = true }
ark-relations = { version = "0.4.0-alpha", default-features = false, optional = true }
tracing = { version = "0.1", default-features = false, features = [ "attributes" ], optional = true }

[features]
default = [ "r1cs", "std" ]
r1cs = [ "ark-relations", "ark-r1cs-std", "tracing" ]
std = [ "ark-ff/std", "ark-r1cs-std/std", "ark-relations/std", "ark-std/std", "ark-serialize/std" ]
